Fix footer on small screens

--- a/default_style.css
+++ b/default_style.css
@@ -13,6 +13,7 @@ footer {
 	width: 100%;
 	padding-top: 5px;
 	padding-bottom: 5px;
+        min-width: 310px;
 }
 
 header {
